--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,8 @@ ul {
 }
 
 .nav__logo {
+    max-width: 142px;
+    max-height: 48px;
     margin: 30px 114px 30px 0;
 }
 
@@ -182,12 +184,12 @@ ul {
 }
 
 .nav__item:not(:last-child) {
-    margin-right: 40px;
+    margin-right: 42px;
 }
 
 .nav__btn {
     margin: 18px 0;
-    padding: 31px 68px;
+    padding: 25px 68px;
 }
 
 .background {
