--- a/css/style.css
+++ b/css/style.css
@@ -127,14 +127,14 @@ li {
     width: calc(100%);
     opacity: 1;
     transform: translate(-50%, -50%);
-    transition: transform 0.08s ease-in-out, width 0.14s ease-in-out;
+    transition: transform 0.12s ease-in-out, width 0.2s ease-in-out;
 }
 
 .link:hover::after {
     transform: translate(-100%, -50%);
     width: calc(50%);
     opacity: 1;
-    transition: transform 0.08s ease-in-out;
+    transition: transform 0.12s ease-in-out, width 0.06s ease-in-out;
 }
 
 .section_title{
@@ -404,6 +404,10 @@ li {
     background-color: var(--dark-blue);
     cursor: pointer;
     transition: .2s ease-in-out;
+}
+
+.checked {
+    padding: 0 0 0 32px;
 }
 
 .toggler__ellipse {
