--- a/css/style.css
+++ b/css/style.css
@@ -220,7 +220,7 @@ li {
     align-items: center;
     gap: 304px;
     padding: 578px clamp(40px, calc((100vw - 1600px) / 2 + 40px), 200px) 83px;
-    background-image: url("../img/background.png");
+    background-image: url("../img/background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
